--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -9,7 +9,7 @@ ENV RESIN_MACHINE_NAME %%RESIN_MACHINE_NAME%%
 
 
 RUN apt-get update && apt-get install -yq \
-    python-dev python-pip git
+    python-dev python-pip git unzip
 
 
 RUN mkdir /opt/weather-monitor
