install pigpiod from packages

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -9,14 +9,14 @@ ENV RESIN_MACHINE_NAME %%RESIN_MACHINE_NAME%%
 
 
 RUN apt-get update && apt-get install -yq \
-    python-dev python-pip git unzip
+    python-dev python-pip git unzip pigpiod
 
 
 RUN mkdir /opt/weather-monitor
 WORKDIR /opt/weather-monitor
 RUN git clone https://github.com/adafruit/Adafruit_Python_BMP.git
 RUN cd Adafruit_Python_BMP && sudo python setup.py install
-RUN wget abyz.co.uk/rpi/pigpio/pigpio.zip && unzip pigpio.zip && cd PIGPIO && make && sudo make install
+# RUN wget abyz.co.uk/rpi/pigpio/pigpio.zip && unzip pigpio.zip && cd PIGPIO && make && sudo make install
 RUN systemctl enable pigpiod
 COPY . /opt/weather-monitor
 
