Install requirements for bmp.py

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -9,8 +9,10 @@ ENV RESIN_MACHINE_NAME %%RESIN_MACHINE_NAME%%
 
 
 RUN apt-get update && apt-get install -yq \
-    python-dev python-pip git unzip
+    python-dev python-pip git unzip \
+    build-essential libi2c-dev i2c-tools libffi-dev
 
+RUN pip install cffi
 
 RUN mkdir /opt/weather-monitor
 WORKDIR /opt/weather-monitor
